{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 26,
  "lineage": "0930a2e5-0509-ad85-a7ee-4dd5c0ef38b8",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b4fc513148ae8e95",
            "arn": "arn:aws:ec2:ap-southeast-1:820242917493:elastic-ip/eipalloc-0b4fc513148ae8e95",
            "association_id": "eipassoc-0157c79bd5a10fe33",
            "domain": "vpc",
            "id": "eipalloc-0b4fc513148ae8e95",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-042ad05a3d76d6913",
            "private_dns": "ip-10-0-0-242.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.242",
            "public_dns": "ec2-18-141-122-86.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.141.122.86",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:820242917493:internet-gateway/igw-0d084500aa7018d99",
            "id": "igw-0d084500aa7018d99",
            "owner_id": "820242917493",
            "region": "ap-southeast-1",
            "vpc_id": "vpc-04eb6be7f132d1bb7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b4fc513148ae8e95",
            "association_id": "eipassoc-0157c79bd5a10fe33",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-01bc9117e006d3c72",
            "network_interface_id": "eni-042ad05a3d76d6913",
            "private_ip": "10.0.0.242",
            "public_ip": "18.141.122.86",
            "region": "ap-southeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d8a99d0bce254003",
            "vpc_id": "vpc-04eb6be7f132d1bb7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:820242917493:route-table/rtb-011b8321e5a1acf45",
            "id": "rtb-011b8321e5a1acf45",
            "owner_id": "820242917493",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01bc9117e006d3c72",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04eb6be7f132d1bb7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "820242917493",
            "id": "rtb-011b8321e5a1acf45",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:820242917493:route-table/rtb-0e280a40026338e8d",
            "id": "rtb-0e280a40026338e8d",
            "owner_id": "820242917493",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d084500aa7018d99",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04eb6be7f132d1bb7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "820242917493",
            "id": "rtb-0e280a40026338e8d",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a74140ea6bb0fc0a",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-011b8321e5a1acf45",
            "subnet_id": "subnet-01e062bfa0194b126"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0518b4ef8b45c8b83",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-011b8321e5a1acf45",
            "subnet_id": "subnet-02d06f52f914f527b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ac32650c492a794",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0e280a40026338e8d",
            "subnet_id": "subnet-0d8a99d0bce254003"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f30c0d135985da0a",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0e280a40026338e8d",
            "subnet_id": "subnet-0a548e0861fdcdd0e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:820242917493:subnet/subnet-01e062bfa0194b126",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e062bfa0194b126",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "820242917493",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "nt531-group9-private-0",
              "kubernetes.io/cluster/nt531-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "nt531-group9-private-0",
              "kubernetes.io/cluster/nt531-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04eb6be7f132d1bb7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "820242917493",
            "id": "subnet-01e062bfa0194b126",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:820242917493:subnet/subnet-02d06f52f914f527b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d06f52f914f527b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "820242917493",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "nt531-group9-private-1",
              "kubernetes.io/cluster/nt531-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "nt531-group9-private-1",
              "kubernetes.io/cluster/nt531-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04eb6be7f132d1bb7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "820242917493",
            "id": "subnet-02d06f52f914f527b",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:820242917493:subnet/subnet-0d8a99d0bce254003",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8a99d0bce254003",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "820242917493",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "nt531-group9-public-0",
              "kubernetes.io/cluster/nt531-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "nt531-group9-public-0",
              "kubernetes.io/cluster/nt531-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04eb6be7f132d1bb7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "820242917493",
            "id": "subnet-0d8a99d0bce254003",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:820242917493:subnet/subnet-0a548e0861fdcdd0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a548e0861fdcdd0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "820242917493",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "nt531-group9-public-1",
              "kubernetes.io/cluster/nt531-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "nt531-group9-public-1",
              "kubernetes.io/cluster/nt531-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04eb6be7f132d1bb7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "820242917493",
            "id": "subnet-0a548e0861fdcdd0e",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:820242917493:vpc/vpc-04eb6be7f132d1bb7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02e6943ea2bcbff37",
            "default_route_table_id": "rtb-0ef7b07cf29c3d9ce",
            "default_security_group_id": "sg-0bace129935404741",
            "dhcp_options_id": "dopt-00c6ab07f72461cc8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04eb6be7f132d1bb7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ef7b07cf29c3d9ce",
            "owner_id": "820242917493",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "nt531-group9-vpc"
            },
            "tags_all": {
              "Name": "nt531-group9-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "820242917493",
            "id": "vpc-04eb6be7f132d1bb7",
            "region": "ap-southeast-1"
          }
        }
      ]
    }
  ]
}